[gd_scene load_steps=3 format=3 uid="uid://cqjnhylsqhl6s"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ka8uy"]
[ext_resource type="Theme" uid="uid://6g50mxodmcvl" path="res://UI Styles/menu_buttons.tres" id="2_paqif"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_ka8uy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.0666667, 0.113725, 0.207843, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("2_paqif")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -11.5
offset_right = 63.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title Name" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Untitled Sokoban
Dungeon Crawler"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Start Button" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Controls Button")
focus_neighbor_bottom = NodePath("../Credits Button")
text = "Start Game"

[node name="Controls Button" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Credits Button")
focus_neighbor_bottom = NodePath("../Start Button")
text = "Controls"

[node name="Credits Button" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start Button")
focus_neighbor_bottom = NodePath("../Controls Button")
text = "Credits"

[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/Controls Button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/Credits Button" to="." method="_on_credits_button_pressed"]
